fix width thing on mobile size

--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -1,16 +1,22 @@
 @import "tailwindcss";
 
-html{
+html {
   scroll-behavior: smooth;
   overflow-x: hidden;
 }
 
-body{
-  font-family: 'Space Grotesk', sans-serif;
-   overflow-x: hidden;
+@media (max-width: 414px) {
+  body {
+    zoom: 0.8;
+  }
 }
 
-.grid-bg{
+body {
+  font-family: 'Space Grotesk', sans-serif;
+  overflow-x: hidden;
+}
+
+.grid-bg {
   background-color: #f5f5f5;
 
   background-image:
@@ -19,23 +25,25 @@ body{
 
   background-size: 40px 40px;
 }
+
 @keyframes floating {
-  0%{
+  0% {
     transform: translateY(0px) rotate(-2deg);
   }
 
-  50%{
+  50% {
     transform: translateY(-15px) rotate(-2deg);
   }
 
-  100%{
+  100% {
     transform: translateY(0px) rotate(-2deg);
   }
 }
 
-.floating{
+.floating {
   animation: floating 3s ease-in-out infinite;
 }
+
 .spin {
   animation: rotate 6s linear infinite;
 }
@@ -44,6 +52,7 @@ body{
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
@@ -57,13 +66,16 @@ body{
   0% {
     transform: translateY(0px);
   }
+
   50% {
     transform: translateY(-15px);
   }
+
   100% {
     transform: translateY(0px);
   }
 }
+
 .pop-enter-active,
 .pop-leave-active {
   transition: all 0.35s ease;
